--- a/main.html
+++ b/main.html
@@ -4,13 +4,34 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>ARIA Role</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <nav>
+		<ul>
+			<li class="listitem"><a href="#home">Home</a</li>
+			<li class="listitem"><a href="#about">About</a</li>
+			<li class="listitem"><a href="#contact">Contact</a</li>
+		</ul>
+	</nav>
+	<h1 id="heading">Nishu Kumar - Front-end Developer</h1>
+	<img src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
+	<!--about-->
+	<section>
+		<p>Hello, I am nishu, a front-end developer passionate about building acceciable and web interfaces.</p>
+	</section>
+	<section>
+		<h2>Top skills</h2>
+		<ul class="list">
+			<li class="listitem">React and JavaScript</li>
+			<li class="listitem">Accessibility (ARIA, WCAG)</li>
+			<li class="listitem">HTML5 & CSS3</li>
+		</ul>
+	</section>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
 </html>
