--- a/main.html
+++ b/main.html
@@ -9,25 +9,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <nav>
-		<ul>
-			<li class="listitem"><a href="#home">Home</a</li>
-			<li class="listitem"><a href="#about">About</a</li>
-			<li class="listitem"><a href="#contact">Contact</a</li>
+    <nav role="navigation">
+		<ul role="list">
+			<li role="listitem"><a href="#home">Home</a</li>
+			<li role="listitem"><a href="#about">About</a</li>
+			<li role="listitem"><a href="#contact">Contact</a</li>
 		</ul>
 	</nav>
-	<h1 id="heading">Nishu Kumar - Front-end Developer</h1>
-	<img src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
+	<h1 role="heading">Nishu Kumar - Front-end Developer</h1>
+	<img role="image" src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
 	<!--about-->
-	<section>
-		<p>Hello, I am nishu, a front-end developer passionate about building acceciable and web interfaces.</p>
+	<section role="profile section">
+		<p role="profile">Hello, I am nishu, a front-end developer passionate about building acceciable and web interfaces.</p>
 	</section>
-	<section>
+	<section role="skills">
 		<h2>Top skills</h2>
-		<ul class="list">
-			<li class="listitem">React and JavaScript</li>
-			<li class="listitem">Accessibility (ARIA, WCAG)</li>
-			<li class="listitem">HTML5 & CSS3</li>
+		<ul role="list">
+			<li role="listitem">React and JavaScript</li>
+			<li role="listitem">Accessibility (ARIA, WCAG)</li>
+			<li role="listitem">HTML5 & CSS3</li>
 		</ul>
 	</section>
 	<script type="text/javascript" src="./script.js">
