--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
 		</ul>
 	</nav>
 	<h1 role="heading">Nishu Kumar - Front-end Developer</h1>
-	<img role="image" src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
+	<img role="img" src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
 	<!--about-->
 	<section role="profile section">
 		<p role="profile">Hello, I am nishu, a front-end developer passionate about building acceciable and web interfaces.</p>
 	</section>
-	<section role="skills">
+	<section role="skills section">
 		<h2>Top skills</h2>
 		<ul role="list">
 			<li role="listitem">React and JavaScript</li>
