--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 	<h1 role="heading">Nishu Kumar - Front-end Developer</h1>
-	<img role="img" src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="">
+	<img role="img" src="https://img.freepik.com/premium-vector/avatar-profile-icon-flat-style-male-user-profile-vector-illustration-isolated-background-man-profile-sign-business-concept_157943-38764.jpg?semt=ais_hybrid&w=450" alt="profile img">
 	<!--about-->
 	<section role="profile section">
 		<p role="profile">Hello, I am nishu, a front-end developer passionate about building acceciable and web interfaces.</p>
